--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 VITE_REACT_APP_API_URL=http://localhost:3306/
+VITE_REACT_CALLBACK_FORM_API_URL=https://docs.google.com/forms/d/e/1FAIpQLScrBLtbM9yKksBCU1unfyYCmLoCbzA3O5L_ws1o7jnVIXiD0g/formResponse
+VITE_REACT_CALLBACK_NAME_API_URL=entry.599392440
+VITE_REACT_CALLBACK_PHONE_API_URL=entry.1131487572
+
+
+VITE_REACT_FEEDBACK_FORM_API_URL=https://docs.google.com/forms/d/e/1FAIpQLSelfiy_cnKKQF2E3OvlE9mhjlF-U1Ml0_IIzbu0JRqo2VlOzA/formResponse
+VITE_REACT_FEEDBACK_NAME_API_URL=entry.178226530
+VITE_REACT_FEEDBACK_EMAIL_API_URL=entry.427354668
+VITE_REACT_FEEDBACK_MESSAGE_API_URL=entry.1638684184
